# Rust_Auth_Backend

./: .env  Cargo.toml
src/: main.rs
src/configs/: db.rs
src/handlers/: auth.rs
src/models/: models.rs
