[package]
name = "Auth_Backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = {version ="0.8.4" , features=["macros"]}
axum-extra = { version = "0.9.4", features = ["typed-header"] }
bcrypt = "0.15"
chrono = { version = "0.4.41", features = ["serde"] }
dotenv = "0.15.0"
flume = "0.11.1"
jsonwebtoken = "9.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "macros", "chrono"] }
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
